# wia-hazard-impact-pipelines

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  environment.yaml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  batch_tasks.example.csv  cyclone.example.yml  cyclone_batch.example.csv  earthquake.example.yml  example_country.yml  vct_grd_admin1_fields.yml
data/: README.md
docs/: data-sources.md  gee-handoff.md  methodology-alignment.md  output-contract.md  outputs.md  troubleshooting.md
docs/indicators/: cyclone.md  drought-spei.md  earthquake-usgs.md  flood.md  heat-utci.md  violence-acled.md
notebooks/: README.md  flood-pipeline.ipynb  spei-pipeline.ipynb  utci-pipeline.ipynb  violence-pipeline.ipynb
schemas/: run_metadata.schema.json
scripts/: audit_hazard_layers.py  batch_preflight.py  batch_run.py  bench_flood_hotspots.py  country_hazard_coverage_check.py  download_worldpop_batch.py  flood_parity_report.py  flood_postrun.py  run_cyclone_pipeline.py  run_earthquake_pipeline.py  run_flood_pipeline.py  run_spei_pipeline.py  run_utci_pipeline.py  run_vct_grd_admin1_batch.sh  run_violence_pipeline.py  spei_parity_report.py  spei_postrun.py  spei_setup_run.py  utci_postrun.py  violence_parity_report.py  violence_postrun.py
tests/: test_admin.py  test_aggregation.py  test_assets.py  test_batch_execute.py  test_batch_issues.py  test_batch_manifest.py  test_batch_readiness.py  test_batch_worldpop_download.py  test_cds.py  test_cli.py  test_config.py  test_core_pipeline.py  test_coverage_checks.py  test_cyclone_bulk.py  test_cyclone_footprints.py  test_cyclone_gdacs.py  test_cyclone_pipeline.py  test_cyclone_tracks.py  test_earthquake_client.py  test_earthquake_config.py  test_earthquake_pipeline.py  test_flood_days_logic.py  test_flood_parity.py  test_flood_perf_smoke.py  test_hazard_flood.py  test_hazard_spei.py  test_hazard_utci.py  test_hazard_violence.py  test_io_paths.py  test_notebook_runner.py  test_raster_ops.py  test_script_runs.py  test_smoke.py  test_smoke_toy_pipeline.py  test_violence_parity.py  test_worldpop.py
(+61 files in other folders)
