[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wia-hazard-impact-pipelines"
version = "0.1.0"
description = "Reference pipelines for estimating population affected by WIA hazards."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "James Brown"}]
dependencies = [
  "affine>=2.4",
  "cdsapi>=0.6",
  "dask[array]>=2023.0",
  "geopandas>=0.14",
  "jsonschema>=4.0",
  "matplotlib>=3.8",
  "netCDF4>=1.6",
  "numpy>=1.26,<3.0",
  "odc-geo>=0.4",
  "odc-stac>=0.3",
  "pandas>=2.1,<3.0",
  "pyproj>=3.6",
  "pystac-client>=0.7",
  "PyYAML>=6.0",
  "rasterio>=1.3",
  "rasterstats>=0.19",
  "requests>=2.31",
  "rioxarray>=0.15",
  "shapely>=2.0",
  "tqdm>=4.66",
  "xarray>=2023.0",
]

[project.optional-dependencies]
dev = [
  "nbformat>=5.9",
  "pytest>=8.0",
  "ruff==0.15.17",
]
notebooks = [
  "ipykernel>=6.0",
  "jupyterlab>=4.0",
]

[project.scripts]
wia-hazards = "wia_pipelines.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wia_pipelines.hazards.cyclone" = ["default.yml"]
"wia_pipelines.hazards.earthquake" = ["default.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires network access, credentials, or external datasets",
  "slow: takes too long for the default contributor test loop",
]

[tool.ruff]
line-length = 110
target-version = "py310"
